%% ER図は主要項目のみの抜粋です。完全な定義は docs/tables を参照してください。
erDiagram
    Race {
        BIGINT RaceId PK
        INT RacecourseId FK
        VARCHAR WeatherCode FK
        VARCHAR TrackConditionCode FK
        VARCHAR RaceClassCode FK
        VARCHAR RaceGradeCode FK
        VARCHAR AgeConditionCode FK
        VARCHAR SexConditionCode FK
        VARCHAR WeightConditionCode FK
        DATE RaceDate
    }
    RaceEntry {
        BIGINT RaceEntryId PK
        BIGINT RaceId FK
        BIGINT HorseId FK
        INT JockeyId FK
        INT TrainerId FK
        TINYINT HorseNumber
        TINYINT FrameNumber
        TINYINT FinishPosition
        VARCHAR EntryStatusCode
        VARCHAR ResultStatusCode
    }
    DataSource {
        INT DataSourceId PK
    }
    BetType {
        VARCHAR BetTypeCode PK
        VARCHAR SelectionTypeCode
    }
    RaceOdds {
        BIGINT RaceOddsId PK
        BIGINT RaceId FK
        VARCHAR BetTypeCode FK
        INT DataSourceId FK
        VARCHAR SelectionKey
        DECIMAL OddsMin
        DECIMAL OddsMax
        BIT IsFinal
        DATETIME2 RecordedAt
    }
    RaceOddsSelection {
        BIGINT RaceOddsId PK
        TINYINT SelectionOrder PK
    }
    RacePayout {
        BIGINT RacePayoutId PK
        BIGINT RaceId FK
        VARCHAR BetTypeCode FK
        INT DataSourceId FK
        VARCHAR SelectionKey
        INT PayoutAmount
    }
    RacePayoutSelection {
        BIGINT RacePayoutId PK
        TINYINT SelectionOrder PK
    }
    RaceEntryMetric {
        BIGINT RaceEntryMetricId PK
        BIGINT RaceEntryId FK
        VARCHAR MetricTypeCode FK
        VARCHAR UnitCode FK
        INT DataSourceId FK
    }
    RaceEntryEvaluation {
        BIGINT RaceEntryEvaluationId PK
        BIGINT RaceEntryId FK
        VARCHAR EvaluationTypeCode FK
        INT DataSourceId FK
    }
    Race ||--o{ RaceEntry : "登録/出走"
    Race ||--o{ RaceOdds : "オッズ"
    BetType ||--o{ RaceOdds : "券種"
    RaceOdds ||--|{ RaceOddsSelection : "選択"
    Race ||--o{ RacePayout : "払戻"
    BetType ||--o{ RacePayout : "券種"
    RacePayout ||--|{ RacePayoutSelection : "選択"
    RaceEntry ||--o{ RaceEntryMetric : "指数"
    RaceEntry ||--o{ RaceEntryEvaluation : "評価"
    DataSource ||--o{ RaceOdds : "出所"
    DataSource ||--o{ RacePayout : "出所"
    DataSource ||--o{ RaceEntryMetric : "出所"
    DataSource ||--o{ RaceEntryEvaluation : "出所"
